--- a/src/main/webapp/static/modules/index/index-user.css
+++ b/src/main/webapp/static/modules/index/index-user.css
@@ -4,7 +4,17 @@
 } */
 body {
 	font-family: "微软雅黑";
-	width: 100%
+	width: 100%;
+	height: 100%;
+}
+html{
+	height: 100%
+}
+
+#header >img{
+	position: absolute;
+	top:0;
+	left:0;
 }
 
 a {
@@ -19,14 +29,19 @@ ul li {
 	padding: 0 4px 0 6px;
 }
 
+#main{
+	height: 100%;
+}
+
+.container-fluid{
+	height: 80%;
+}
+
 #header {
 	width: 100%;
+	height: 77%;;
 	background-color: #e20001;
-	height: 60px;
-	/* 	overflow: hidden; */
-	/* 滤镜可使1920分屏正常显示背景图大小，IE下会导致某些功能无法正常使用 */
-	/*     background-size:cover; */
-	/*     filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='${ctxStatic}/images/new_head_bg.png',sizingMethod='scale'); */
+	text-align: center;
 }
 
 #tit {
@@ -89,21 +104,25 @@ ul li {
 
 #footer {
 	width: 100%;
-	background-image: url(../../images/foot_bg.jpg);
-	background-repeat: repeat-x;
-	height: 39px;
-	line-height: 39px;
-	/* 滤镜可使1920分屏正常显示背景图大小，IE下会导致某些功能无法正常使用 */
-	/* 	background-size:cover; */
-	/* 	filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='${ctxStatic}/images/foot_bg.jpg',sizingMethod='scale'); */
+	height: 23%;
+	position: absolute;
+	bottom: 0;
 }
 
 .copyright {
 	margin: 0 auto;
 	text-align: center;
-	color: white;
+	/* color: white; */
 	font-size: 14px;
+	font-weight:bold;
 	font-family: 楷体_GB2312;
+}
+
+.row-fluid .span3{
+	text-align: center;
+}
+.row-fluid-img{
+	margin-top: -100px;
 }
 
 #title {
