--- a/src/main/webapp/static/common/index.css
+++ b/src/main/webapp/static/common/index.css
@@ -45,7 +45,7 @@ text-decoration:none;
 body{
 	width: 100%;
 	height: 100%;
-	background: url(../images/terminal/bg.png) no-repeat;
+	background: url(../images/terminal/bg.png);
 }
 .clear{
 	clear:both
@@ -300,7 +300,7 @@ body{
 	height: 67px;
 	line-height: 67px;
 	color: #fff;
-	background: url(../images/terminal/bottom.png) no-repeat;
+	background: url(../images/terminal/bottom.png);
 	font-size: 20px;
 	text-align: center
 }
